[dfot-vgg-controlnet] first version of training on test dataset with vggt

--- a/configurations/algorithm/backbone/u_vit3d_pose_controlnet.yaml
+++ b/configurations/algorithm/backbone/u_vit3d_pose_controlnet.yaml
@@ -1,4 +1,6 @@
 name: u_vit3d_pose_controlnet
+train_base: false
+train_control: true 
 channels: [128, 256, 512, 1024]
 emb_channels: 1024
 patch_size: 2
@@ -16,3 +18,7 @@ external_cond_dropout: 0.1 # probability of dropping a camera pose of each video
 additional_conditioning:
   type: dummy 
   shape: [1, 1, 1024] # [batch_size, num_frames, hidden_size]
+connector: 
+  hidden_dim: 256 # output resolution
+  num_layers: 3 
+  out_channel: 3 
