--- a/configurations/dataset/realestate10k.yaml
+++ b/configurations/dataset/realestate10k.yaml
@@ -4,7 +4,7 @@
 defaults:
   - base_video
 
-save_dir: data/real-estate-10k
+save_dir: data/real-estate-10k-mini
 external_cond_dim: 16
 max_frames: 8
 frame_skip: 10
@@ -14,7 +14,6 @@ data_mean: [[[0.577]], [[0.517]], [[0.461]]]
 data_std: [[[0.249]], [[0.249]], [[0.268]]]
 filter_min_len: null
 num_eval_videos: 1024
-subdataset_size: ???
 maximize_training_data: False
 augmentation:
   frame_skip_increase: 0 # increase frame skip by this amount each subepoch
