--- a/configurations/dataset_experiment/realestate10k_video_generation.yaml
+++ b/configurations/dataset_experiment/realestate10k_video_generation.yaml
@@ -6,7 +6,7 @@
 # useful for dataset-specific overrides
 
 dataset:
-  subdataset_size: 2400000
+  subdataset_size:  500 # 2400000
   num_eval_videos: 768
   maximize_training_data: true
   augmentation:
