--- a/configurations/config.yaml
+++ b/configurations/config.yaml
@@ -11,7 +11,7 @@ debug: false # global debug flag will be passed into configuration of experiment
 wandb:
   entity: v-haoywu # wandb account name / organization name [fixme]
   project: dfot # wandb project name; if not provided, defaults to root folder name [fixme]
-  mode: offline  # set wandb logging to online, offline or dryrun
+  mode: online  # set wandb logging to online, offline or dryrun
 
 resume: null # wandb run id to resume logging and loading checkpoint from
 load: null # wanmdb run id containing checkpoint or a path to a checkpoint file 
