update inference configs, but not finished yet

--- a/configurations/algorithm/vggt_controlnet_dfot_video_pose.yaml
+++ b/configurations/algorithm/vggt_controlnet_dfot_video_pose.yaml
@@ -7,7 +7,7 @@ defaults:
 
 compile: false 
 checkpoint:
-  reset_optimizer: True
+  reset_optimizer: True # must true since trainable is different from pretrain 
   strict: False
 
 camera_pose_conditioning:
