--- a/configurations/dataset/realestate10k.yaml
+++ b/configurations/dataset/realestate10k.yaml
@@ -4,7 +4,7 @@
 defaults:
   - base_video
 
-save_dir: data/real-estate-10k-mini
+save_dir: data/real-estate-10k
 external_cond_dim: 16
 max_frames: 16 # updated by haoyu for longer video
 frame_skip: 10
